query the CVS tree.  For example,

    http://cvs-mirror.mozilla.org/webtools/bonsai/cvsquery.cgi?module=all&branch=HEAD&branchtype=match&dir=mozilla%2Fwebtools%2Fbugzilla&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=week&mindate=&maxdate=&cvsroot=%2Fcvsroot 

will tell you what has been changed in the last week.


3/3/99 Added a "disallownew" field to the products table.  If non-zero, then
don't let people file new bugs against this product.  (This is for when a 
product is retired, but you want to keep the bug reports around for posterity.)
Feed this to MySQL:

	alter table products add column disallownew tinyint not null;


2/8/99 Added FreeBSD to the list of OS's.  Feed this to MySQL:

	alter table bugs change column op_sys op_sys enum("All", "Windows 3.1", "Windows 95", "Windows 98", "Windows NT", "Mac System 7", "Mac System 7.5", "Mac System 7.6.1", "Mac System 8.0", "Mac System 8.5", "AIX", "BSDI", "HP-UX", "IRIX", "Linux", "FreeBSD", "OSF/1", "Solaris", "SunOS", "OS/2", "other") not null;


2/4/99 Added a new column "description" to the components table, and added 
links to a new page which will use this to describe the components of a 
given product.  Feed this to MySQL:

	alter table components add column description mediumtext not null;


2/3/99 Added a new column "initialqacontact" to the components table that gives
an initial QA contact field.  It may be empty if you wish the initial qa
contact to be empty.  If you're not using the QA contact field, you don't need
to add this column, but you might as well be safe and add it anyway:

	alter table components add column initialqacontact tinytext not null;


2/2/99 Added a new column "milestoneurl" to the products table that gives a URL
which is to describe the currently defined milestones for a product.  If you
don't use target milestone, you might be able to get away without adding this
column, but you might as well be safe and add it anyway:
