@@ -129,7 +129,8 @@ This field describes the impact of a bug.
 <a name="priority"><h2>Priority</h2></a>
 
 This field describes the importance and order in which a bug should be
-fixed.  The available priorities are:
+fixed.  This field is utilized by the programmers/engineers to
+prioritized their work to be done.  The available priorities are:
 
 <p>
 <p>
@@ -204,6 +205,6 @@ status field appropriately.
 <hr>
 <address><a href="http://home.netscape.com/people/terry/">Terry Weissman &lt;terry@netscape.com&gt;</a></address>
 <!-- hhmts start -->
-Last modified: Fri Jan 15 13:36:36 1999
+Last modified: Mon Mar  8 18:31:07 1999
 <!-- hhmts end -->
 </body> </html>
